new update added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row top_header">
             <div class="col-md-1 offset-1 ">
                 <div class="logo">
-                    <img src="img/logo.png" height="54" alt="">
+                    <img class="img-responsive" src="img/logo.png" height="54" alt="">
                 </div>
             </div>
             <div class="col-md-8 offset-1">
@@ -46,7 +46,7 @@
             
 
             <div class="col-md-4 offset-1">
-                <img src="img/about-us.png" alt="">
+                <img  class="img-responsive" src="img/about-us.png" alt="">
             </div>
             <div class="col-md-4 offset-1">
                 <h3>About Us</h3>
@@ -61,8 +61,65 @@
 
 
     </div>
+    <div class="row our_services">
+        <div class="col-md-12 heading_services">
+            <h2>Our Services</h2>
 
+        </div>
+        <div class="col-md-12">
+            <div class="col-md-2 offset-1 service_content">
+                <h3>Software Development</h3>
+                <p>Work with our experienced software development team to build the right software solutions tailor-made for your business.</p>
+                <div class="divider"></div>
+            </div>
+            <div class="col-md-2 service_content">
+                <h3>Mobile Apps</h3>
+                <p>We use the latest technologies for mobile application development. Let us help you create beautiful, elegant & productive mobile apps that stand out.</p>
+                <div class="divider"></div>
+            </div>
+            <div class="col-md-2 service_content" >
+                <h3>Web Design & Development</h3>
+                <p>We provide the most extensive web design & development services. Responsive web apps, modern UI/UX design, web development & deployment..</p>
+                <div class="divider"></div>
+            </div>
+            <div class="col-md-2 service_content">
+                <h3>Wordpress Development</h3>
+                <p>Take your wordpress powered websites to the next level. We create custom themes, add new functionalities, speed optimizations & more.</p>
+                <div class="divider"></div>
+            </div>
+            <div class="col-md-2 service_content">
+                <h3>Digital Marketing</h3>
+                <p>We provide the best of SEO, SEM, Social Media and Content strategy to boost your brands online. We help brands connect with the right audiences.</p>
+            </div>
+        </div>
 
+    </div>
+   
+    <div class="row our_products">
+        <div class="col-md-12 product_heading">
+            <h2 style="text-align:center;">Our Products</h2>
+
+        </div>
+        <div class="container products_cont">
+        <div class="col-md-12">
+            <div class="col-md-4 product_content">
+                <img src="img/jslogo.png" alt="" width="160" height="73">
+                <h3>JSdevs</h3>
+                <p>Javascript Developers (JSdevs) is a platform that connects modern Javascript developers to prospective clients around the globe. JSdevs enable enterprises to find the best talent for their latest & upcoming projects. JSdevs aim to provide the best talent in JS development.</p>
+            </div>
+            <div class="col-md-4  product_content">
+                <img src="img/phunar.png" alt="" width="160" height="73">
+                <h3>Punar</h3>
+                <p>Javascript Developers (JSdevs) is a platform that connects modern Javascript developers to prospective clients around the globe. JSdevs enable enterprises to find the best talent for their latest & upcoming projects. JSdevs aim to provide the best talent in JS development.</p>
+            </div>
+            <div class="col-md-4 product_content">
+                <img src="img/ru.png" alt="" width="160" height="73">
+                <h3>Rupeeba</h3>
+                <p>Javascript Developers (JSdevs) is a platform that connects modern Javascript developers to prospective clients around the globe. JSdevs enable enterprises to find the best talent for their latest & upcoming projects. JSdevs aim to provide the best talent in JS development.</p>
+            </div>
+        </div>
+    </div>
+    </div>
 
 
     <div class="footer">
